--- a/tests/index.html
+++ b/tests/index.html
@@ -98,5 +98,6 @@
     
 </script>
   <script src="capture-tests.js"></script>
+  <script src="patchAnchorLinks-tests.js"></script>
 </body>
 </html>
