--- a/tests/fixtures/smart-banner-above-tag.html
+++ b/tests/fixtures/smart-banner-above-tag.html
@@ -8,23 +8,25 @@
 // path to capture.js
 "/build/capture.js",
 
-// calls to APIs go here (or path to a main.js)
 function() {
     var capturing = window.Mobify && window.Mobify.capturing || false;
 
     if (capturing) {
-        console.log("Executing main during capturing phase!")
+        Capture.isIOS8_0 = function() {
+            return true;
+        };
 
-        // Grab reference to a newly created document
         Capture.init(function(capture){
             capture.renderCapturedDoc();
         });
+    } else {
+        // Tell parent we are ready
+        parent.postMessage("finished", "*");
     }
 });</script>
 <!-- END MOBIFY TAG -->
 </head>
 
 <body>
-    <p>This is a Smart Banners test.</p>
 </body>
 </html>
