Push up failing test.

--- a/tests/fixtures/plaintext-script-with-opening-body.html
+++ b/tests/fixtures/plaintext-script-with-opening-body.html
@@ -7,7 +7,7 @@
 <head foo="bar">
     
     <link rel="stylesheet" href="/path/to/stylesheet.css">
-    <script>"<body>"</script>
+    <script type="text/javascript">"<body foo="fail">"</script>
 </head>
 <body bar="baz">
     <!-- comment with <head> -->
