Fix smart banner test:
- Trigger ready event for banner test iframe after the smart banner meta
  tag, since it wouldn't be available before then

--- a/tests/fixtures/smart-banner-below-tag.html
+++ b/tests/fixtures/smart-banner-below-tag.html
@@ -18,13 +18,18 @@ function() {
         Capture.init(function(capture){
             capture.renderCapturedDoc();
         });
-    } else {
-        // Tell parent we are ready
-        parent.postMessage("finished", "*");
     }
 });</script>
 <!-- END MOBIFY TAG -->
     <meta name="apple-itunes-app" content="app-id=284882215">
+    <script>
+        var capturing = window.Mobify && window.Mobify.capturing || false;
+
+        if (!capturing) {
+            // Tell parent we are ready
+            parent.postMessage("finished", "*");
+        }
+    </script>
 </head>
 
 <body>
