--- a/tests/fixtures/plaintext-body-in-comment.html
+++ b/tests/fixtures/plaintext-body-in-comment.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html class="testclass">
-<!-- <head> -->
 <script>
     // Simulate mobify
     document.write("<plaintext style=\"display:none\">");
 </script>
+<!-- test comment -->
 <head foo="bar">
+
     <link rel="stylesheet" href="/path/to/stylesheet.css">
 </head>
+<!-- <body class="bad"> -->
 <body bar="baz">
     <!-- comment with <head> -->
     <p>Plaintext example page!</p>
