--- a/tests/fixtures/plaintext-head-in-comment.html
+++ b/tests/fixtures/plaintext-head-in-comment.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html class="testclass">
-<!-- <head> -->
-<script>
-    // Simulate mobify
-    document.write("<plaintext style=\"display:none\">");
-</script>
 <head foo="bar">
+<!-- <head> begin -->
+    <script>
+        // Simulate mobify
+        document.write("<plaintext style=\"display:none\">");
+    </script>
     <link rel="stylesheet" href="/path/to/stylesheet.css">
+<!-- </head> end -->
 </head>
 <body bar="baz">
     <!-- comment with <head> -->
