--- a/tests/index.html
+++ b/tests/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>capture.js tests</title>
-  <link rel="stylesheet" href="/tests/resources/qunit-1.10.0.css">
+  <link rel="stylesheet" href="/tests/resources/qunit.1.23.1.css">
   <script src="/tests/resources/require.js"></script>
   <script src="/tests/resources/jquery-1.7.1.js"></script>
   <script src="/tests/utils/compare-html.js"></script>
